[gd_scene load_steps=10 format=3 uid="uid://de5pprq5xgqym"]

[ext_resource type="Texture2D" uid="uid://blkyn5oolt7s4" path="res://Assets/zombie_standing.png" id="1_0ub32"]
[ext_resource type="Script" path="res://Scripts/zombie_enemy.gd" id="1_0unxw"]
[ext_resource type="Script" path="res://Scripts/state_machine.gd" id="3_g3yqk"]
[ext_resource type="Script" path="res://Scripts/idle.gd" id="4_cuguh"]
[ext_resource type="Script" path="res://Scripts/random_timer.gd" id="5_q28r5"]
[ext_resource type="Script" path="res://Scripts/wandering.gd" id="6_2u1d3"]
[ext_resource type="Script" path="res://Scripts/chase.gd" id="7_hu8px"]
[ext_resource type="Script" path="res://Scripts/attack.gd" id="8_ousye"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_skmyj"]
radius = 11.0
height = 42.0

[node name="ZombieEnemy" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 39
script = ExtResource("1_0unxw")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_0ub32")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_skmyj")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("3_g3yqk")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("4_cuguh")

[node name="IdleTimer" type="Timer" parent="StateMachine/Idle"]
one_shot = true
script = ExtResource("5_q28r5")

[node name="RotationTimer" type="Timer" parent="StateMachine/Idle"]
script = ExtResource("5_q28r5")
min_time = 0.2
max_time = 1.0

[node name="Wandering" type="Node" parent="StateMachine"]
script = ExtResource("6_2u1d3")

[node name="WanderingTimer" type="Timer" parent="StateMachine/Wandering"]
wait_time = 15.0
one_shot = true

[node name="Chase" type="Node" parent="StateMachine"]
script = ExtResource("7_hu8px")

[node name="RandomTargetChaseTimer" type="Timer" parent="StateMachine/Chase"]
one_shot = true
script = ExtResource("5_q28r5")
min_time = 0.5
max_time = 3.0

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource("8_ousye")

[node name="StateLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="VisionRayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(174, 0)
collide_with_areas = true

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="AttackArea"]
polygon = PackedVector2Array(0, 0, 45, -25, 45, 25)

[connection signal="timeout" from="StateMachine/Idle/IdleTimer" to="StateMachine/Idle" method="_on_idle_timer_timeout"]
[connection signal="timeout" from="StateMachine/Idle/RotationTimer" to="StateMachine/Idle" method="_on_rotation_timer_timeout"]
[connection signal="timeout" from="StateMachine/Wandering/WanderingTimer" to="StateMachine/Wandering" method="_on_wandering_timer_timeout"]
[connection signal="timeout" from="StateMachine/Chase/RandomTargetChaseTimer" to="StateMachine/Chase" method="_on_random_target_chase_timer_timeout"]
[connection signal="body_entered" from="AttackArea" to="StateMachine/Chase" method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="StateMachine/Attack" method="_on_attack_area_body_exited"]
